--- a/styles/style.scss
+++ b/styles/style.scss
@@ -138,9 +138,6 @@
     }
 }
 
-.aboutUsGallery__cell__heading {
-    margin-top:2px;
-}
 
 .aboutUsContentText {
     flex-direction: column;
@@ -174,7 +171,7 @@
        flex-basis: 100%;
        margin-top: 25px;
        &__body {
-           margin: 25px 0;
+            margin: 25px 0;
        }
     }
 } /* END OF MAX-WIDTH 1170PX */
@@ -276,7 +273,7 @@
 }
 
 .reviewHeading {
-    padding:4%; 
+    padding:5%; 
     text-align: center;
 }
 
@@ -292,16 +289,17 @@ h2.reviewHeading__h2 {
     position: relative;
     &__text {
         font-size: 1.8rem;
-        margin-top: 35px;
+        margin-top: 30px;
     }
     &__body {
         position: absolute;
         width: 500px;
     }
     &__author {
+        width:300px;
         display:inline-block;
         margin-top: 150px;
-        margin-bottom: 40px;
+        margin-bottom: 0px;
         font-style: italic;
     }
 }
@@ -324,7 +322,6 @@ h2.reviewHeading__h2 {
     }
   }
 
-
 .flickity-button-icon {
   fill: #D0CDCD;
 }
@@ -343,19 +340,27 @@ right: -70px;
 }
 
 @media (max-width: 1170px) {
+
+    .sectionFlickityBackground {
+         height: 440px;
+        }
     .reviewsContent {
+        position: relative;
         
          &__body {
              margin-top:-10%;
-             width: 100%;
+             width: 400px;
              font-size: 1.5rem;
+             position: absolute;
          }
          &__author {
-             margin-top:125px;
+             width:300px;
+             margin-top:60px;
+             font-size:1.4rem;
+             margin-bottom: 0px;
+            
          }
-         .sectionFlickityBackground {
-         height: 400px;
-        }
+         
           /* position outside */
         .flickity-prev-next-button.previous {
         left: -80px;
@@ -363,32 +368,42 @@ right: -70px;
         .flickity-prev-next-button.next {
         right: -80px;
         }
+
+    
     } /* END OF MAX-WIDTH 1170PX */
 }
 
 @media (max-width: 905px) {
      .reviewsContent {
-         &__body {
-             margin-top:-60px;
-             width: 100%;
-             font-size: 1.6rem;
-         }
-         &__author {
-            margin-top:170px;
-        }
+         position: relative;
+            &__body {
+                margin-top:-70px;
+                width: 300px;
+                font-size: 1.4rem;
+                position: absolute;
+            }
+            &__author {
+                width:300px;
+                margin:19px;
+                font-size: 1.4rem;
+                margin-bottom: 0px;
+            }
         }
 
-        .sectionFlickityBackground {
-            height: 550px;
-        }
+    .sectionFlickityBackground {
+        padding-top:20px;
+        height: 380px;
+    }
 
-        /* position outside */
-        .flickity-prev-next-button.previous {
-        left: -60px;
-        }
-        .flickity-prev-next-button.next {
-        right: -60px;
-        }
+    /* position outside */
+    .flickity-prev-next-button.previous {
+    top: 35px;
+    left: -60px;
+    }
+    .flickity-prev-next-button.next {
+    top: 35px;
+    right: -60px;
+    }
 } /* END OF MAX-WIDTH 905PX */
 
 @media (max-width: 640px) {
@@ -398,28 +413,32 @@ right: -70px;
             text-align: center;
         }
 
-     .reviewsContent {
-         &__body {
-             margin-top:-90px;
-             width: 100%;
-             font-size: 1.3rem;
-         }
-         &__author {
-            margin-top:160px;
-            font-size: 1.0rem;
-        }
+        .reviewsContent {
+        position: relative;
+            &__body {
+                margin-top:-80px;
+                width: 300px;
+                font-size: 1.3rem;
+                position: absolute;
+            }
+            &__author {
+                width:300px;
+                margin-top: 15px;
+                font-size: 1.3rem;
+                margin-bottom: 0px;
+            }
 
-        .sectionFlickityBackground {
-            height: 350px;
-        }
+            .sectionFlickityBackground {
+                height: 280px;
+            }
 
-        /* position outside */
-        .flickity-prev-next-button.previous {
-        left: -60px;
-        }
-        .flickity-prev-next-button.next {
-        right: -60px;
-        }
+            /* position outside */
+            .flickity-prev-next-button.previous {
+            left: -60px;
+            }
+            .flickity-prev-next-button.next {
+            right: -60px;
+            }
     }
 } /* END OF MAX-WIDTH 640PX */
 
@@ -436,19 +455,25 @@ right: -70px;
             text-align: center;
         }
     .reviewsContent {
-         &__body {
-             margin-top:-90px;
-             width: 100%;
-             font-size: 1.3rem;
-         }
-         &__author {
-            margin-top:200px;
-            font-size: 1.0rem;
-        }
+        position: relative;
 
-        .sectionFlickityBackground {
-            height: 130px;
-        }
+            
+            &__body {
+                position: absolute;
+                margin-top:-90px;
+                width: 200px;
+                font-size: 1.3rem;
+            }
+            &__author {
+                margin-top:20px;
+                width:220px;
+                font-size: 1.2rem;
+                margin-bottom: 0px;
+            }
+
+            .sectionFlickityBackground {
+                height: 130px;
+            }
     }
 }/* END OF MAX-WIDTH 460PX */
 /* REVIEWS SECTION STYLES END */
@@ -492,8 +517,8 @@ right: -70px;
         &::after {
             content: '';    
             border-bottom: 1px solid #FFFFFF;
-            width: 60%;
             position: absolute;
+            width: 60%;
             bottom: -50%;
             left: 20%;
             height: 1px;
@@ -504,10 +529,10 @@ right: -70px;
 @media (max-width: 1050px) {
     .eventsContent__overlay {
         &__heading {
-            font-size: 3.0rem;;
+            font-size: 1.6em;;
         }
         &__body {
-            font-size: 1.4rem;;
+            font-size: 1.4rem;
         }
     }
 } /* END OF MAX-WIDTH 1050PX */
@@ -525,7 +550,8 @@ right: -70px;
 
     .eventsContent__overlay {
         &__heading {
-            font-size: 4.0rem;;
+            font-size: 2.4rem;
+            margin-bottom: 40px;
         }
         &__body {
             font-size: 1.8rem;
@@ -539,7 +565,7 @@ right: -70px;
             font-size: 1.4rem;
         }
         &__heading {
-            font-size: 3.6rem;
+            font-size: 2.0rem;
         }
     }
 } /* END OF MAX-WIDTH 525PX */
@@ -617,10 +643,17 @@ right: -70px;
         flex-wrap: wrap;
     }
 
-    .statsContent__cell{
+    .statsContent__cell {
         width: calc(50% - 20px);
-        margin: 20px 10px;
+        margin: 15px 5px;
         font-size: 1.1rem;
+
+        &__icon {
+            font-size:3.0em;
+        }
+        &__body {
+        font-size: 1.8rem;
+    }
     }
 } /* END OF MAX-WIDTH 785PX */
 /* STATS SECTION STYLES END */
@@ -648,7 +681,7 @@ right: -70px;
     }
 }
 
-@media (max-width: 785px) {
+@media (max-width: 786px) {
 
     .blogContent {
         flex-wrap: wrap;
@@ -659,7 +692,7 @@ right: -70px;
         width: 100%;
         margin-bottom: 25px;
     }
-} /* END OF MAX-WIDTH 785PX */
+} /* END OF MAX-WIDTH 786PX */
 /* BLOG SECTION STYLES END */
 
 
