--- a/styles/style.css
+++ b/styles/style.css
@@ -156,6 +156,166 @@ img {
   padding: 75px 0;
   margin-bottom: 0; }
 
+/* HOVER EFFECTS STYLES START */
+/* ANIMATED SVG NAV ROUND HOVER */
+/*       Just setting CSS for the page   */
+* {
+  margin: 0;
+  padding: 0; }
+
+html,
+css {
+  width: 100%;
+  height: 100%; }
+
+.position {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-top: 15%; }
+
+#workarea {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #1e1a3e;
+  font-family: Raleway; }
+
+#personal {
+  color: white;
+  text-decoration: none;
+  position: absolute;
+  bottom: 15px;
+  right: 2%; }
+
+/*    start code for the actual button:         */
+/*   
+    Spot is the span on the inside of the href that
+    fills the parent and makes the hover and link work
+    for the entire div
+*/
+.spot {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 9px;
+  left: 3px;
+  text-align: center; }
+
+/*
+    This is the outer svg wrapper that the SVG itself will 
+    fill. Multiple svg-wrapper classes can be put side by side.
+*/
+.svg-wrapper {
+  margin-top: 0;
+  position: relative;
+  width: 150px;
+  /*make sure to use same height/width as in the html*/
+  height: 40px;
+  display: inline-block;
+  border-radius: 3px;
+  margin-left: 5px;
+  margin-right: 5px; }
+
+/*
+  This is where we define the fill, color, thickness,
+  and stroke pattern of the SVG when there is no hover.
+  The dasharray and offset together define the line position
+  under the words. Here's also where the transition speed is set.
+*/
+#shape {
+  stroke-width: 6px;
+  fill: transparent;
+  stroke: #009FFD;
+  stroke-dasharray: 85 400;
+  stroke: none;
+  -webkit-transition: .5s all ease;
+  -o-transition: .5s all ease;
+  transition: .5s all ease; }
+
+/* 
+    Pushing the text up into the SVG. Without this the
+    text would be below the div's.
+*/
+#text {
+  margin-top: -35px;
+  text-align: center; }
+
+#text a {
+  color: white;
+  text-decoration: none;
+  font-weight: 100;
+  font-size: 1.1em; }
+
+/* 
+    Changing the shape on hover. I change the color of the stroke,
+make it thinner, then set it to again wrap around the entire parent element.
+*/
+.svg-wrapper:hover #shape {
+  stroke-dasharray: 50 0;
+  stroke-width: 3px;
+  stroke-dashoffset: 0;
+  stroke: #d60606; }
+
+/* HOVER BUTTON */
+html, body {
+  -webkit-perspective: 700px;
+  -moz-perspective: 700px;
+  -ms-perspective: 700px;
+  perspective: 700px; }
+
+/* Reset */
+.buttonhov {
+  background: transparent;
+  border: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: 0;
+  -webkit-appearance: none; }
+
+/* Custom */
+.buttonhov {
+  display: inline-block;
+  position: relative;
+  padding: 20px 38px;
+  top: 0;
+  font-size: 30px;
+  font-family: "Open Sans", Helvetica;
+  border-radius: 4px;
+  border-bottom: 1px solid rgba(28, 227, 125, 0.5);
+  background: #16e689;
+  color: #fff;
+  -webkit-box-shadow: 0px 0px 0px rgba(15, 165, 60, 0.1);
+  box-shadow: 0px 0px 0px rgba(15, 165, 60, 0.1);
+  -webkit-transform: translateZ(0);
+  -moz-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  transition: all 0.2s ease; }
+
+.buttonhov:hover {
+  top: -10px;
+  -webkit-box-shadow: 0px 10px 10px rgba(15, 165, 60, 0.2);
+  box-shadow: 0px 10px 10px rgba(15, 165, 60, 0.2);
+  -webkit-transform: rotateX(20deg);
+  -moz-transform: rotateX(20deg);
+  -ms-transform: rotateX(20deg);
+  transform: rotateX(20deg); }
+
+.buttonhov:active {
+  top: 0px;
+  -webkit-box-shadow: 0px 0px 0px rgba(15, 165, 60, 0);
+  box-shadow: 0px 0px 0px rgba(15, 165, 60, 0);
+  background: #14e085; }
+
+.buttonhov--start {
+  margin-top: 20px;
+  padding: 10px 25px; }
+
 h1, h2, h3, h4, h5, h6, ul {
   margin: 0;
   padding: 0; }
@@ -288,7 +448,7 @@ h3.aboutUsGallery__cell__heading {
 /* BUTTON STYLES*/
 .button {
   font-size: 1.7rem;
-  padding: 10px 30px;
+  padding: 12px 28px;
   border-radius: 30px;
   text-transform: uppercase;
   font-weight: 600;
@@ -697,7 +857,7 @@ h2.reviewHeading__h2 {
 
 @media (max-width: 1050px) {
   .eventsContent__overlay__heading {
-    font-size: 1.6em; }
+    font-size: 2.0rem; }
   .eventsContent__overlay__body {
     font-size: 1.4rem; } }
 
@@ -713,16 +873,17 @@ h2.reviewHeading__h2 {
     -ms-flex-preferred-size: 100%;
     flex-basis: 100%; }
   .eventsContent__overlay__heading {
-    font-size: 2.4rem;
-    margin-bottom: 40px; }
+    font-size: 2.2rem;
+    margin-bottom: 8px; }
   .eventsContent__overlay__body {
-    font-size: 1.8rem; } }
+    font-size: 1.6rem; } }
 
 /* END OF MAX-WIDTH 880PX */
 @media (max-width: 525px) {
   .eventsContent__overlay__body {
     font-size: 1.4rem; }
   .eventsContent__overlay__heading {
+    margin-top: 10px;
     font-size: 2.0rem; } }
 
 /* END OF MAX-WIDTH 525PX */
