--- a/styles/style.scss
+++ b/styles/style.scss
@@ -88,7 +88,7 @@
 /* BUTTON STYLES*/
 .button {
     font-size: 1.7rem;
-    padding: 10px 30px;
+    padding: 12px 28px;
     border-radius: 30px;
     text-transform: uppercase;
     font-weight: 600;
@@ -102,6 +102,10 @@
     &--black {
         background-color: #000000;
     }
+}
+
+.startbtn {
+    
 }
 /* BUTTON STYLES END */
 
@@ -529,7 +533,7 @@ right: -70px;
 @media (max-width: 1050px) {
     .eventsContent__overlay {
         &__heading {
-            font-size: 1.6em;;
+            font-size: 2.0rem;
         }
         &__body {
             font-size: 1.4rem;
@@ -550,11 +554,11 @@ right: -70px;
 
     .eventsContent__overlay {
         &__heading {
-            font-size: 2.4rem;
-            margin-bottom: 40px;
+            font-size: 2.2rem;
+            margin-bottom: 8px;
         }
         &__body {
-            font-size: 1.8rem;
+            font-size: 1.6rem;
         }
     }
 } /* END OF MAX-WIDTH 880PX */
@@ -563,8 +567,10 @@ right: -70px;
     .eventsContent__overlay {
         &__body {
             font-size: 1.4rem;
+            
         }
         &__heading {
+            margin-top:10px;
             font-size: 2.0rem;
         }
     }
@@ -859,3 +865,5 @@ right: -70px;
 .headerNav__logo, .headerNavMenu {
     align-self: baseline;
 }
+
+
