--- a/styles/style.scss
+++ b/styles/style.scss
@@ -66,10 +66,29 @@
     }
 }
 
+@media (max-width: 1100px) {
+
+    .navColumns {
+        flex-direction: column;
+        margin-left:50%
+    }
+
+    .headerContent {
+        text-align: center;
+        line-height: 40px;
+        align-items: center;
+        align-self: center;
+        &__sub-heading {
+            margin: 15px 0;
+        }
+    }
+}
+
 @media (max-width: 880px) {
 
     .navColumns {
         flex-direction: column;
+        margin-left:0;
     }
 
     .headerContent {
@@ -102,9 +121,14 @@
     &--black {
         background-color: #000000;
     }
+    &:hover {
+        box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    }
 }
 
-.startbtn {
+.headerContent button {
+    margin-top:5%;
+    padding:12px 25px;
     
 }
 /* BUTTON STYLES END */
@@ -139,6 +163,10 @@
     margin: 20px 50px;
     &__heading {
         margin-top: 30px;
+    }
+    &:hover {
+        /* box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        transition: 0.2s all ease-in; */
     }
 }
 
@@ -499,7 +527,6 @@ right: -70px;
     text-align: center;
     flex-direction: column;
     width: 100%;
-    
 	background-color: rgba(0, 0, 0, 0.8);
 	justify-content: center;
 	align-items: center;
@@ -512,6 +539,9 @@ right: -70px;
     &__body {
         font-size: 1.6rem;
         width: 80%;
+        margin-top:5%;
+    
+
     }
     &__heading {
         position: relative;
@@ -684,6 +714,13 @@ right: -70px;
     &__link {
         font-size: 1.4rem;
         color: $orange;
+        &:hover {
+            margin-left:2px;
+            border-top:2px solid black;
+            border-bottom:2px solid black;
+          
+
+        }
     }
 }
 
@@ -850,6 +887,10 @@ right: -70px;
         width: 100%;
         justify-content: center;
         line-height: 35px;
+    }
+
+    .footerSocial__cell {
+        top:2%;
     }
 
 }/* END OF MAX-WIDTH 785PX */
