--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -35,6 +35,85 @@ li:focus {
 }
 
 
+/* HAMBURGER TOGGLE START */
+label[for="toggle"] {
+    position: fixed;
+    top:25px;
+    left:25px;
+    color: black;
+    z-index: 6;
+    font-size: 3rem;
+}
+
+.navigation--responsive {
+    display: none;
+}
+
+#toggle {
+    display: none;
+}
+
+i.fa-bars {
+    display:none;
+}
+
+@media (max-width: 1100px) {
+    #toggle:checked ~ .navigation--responsive {
+        top:0vh;
+    }
+
+    .headerNavMenu {
+        display: none;
+    }
+
+    i.fa-bars {
+        display: block;
+        cursor: pointer;
+        color:white;
+    }
+
+    .navigation--responsive {
+        display:block;
+        background: rgba(0,0,0,0.5);
+        width: 100%;
+        height:100vh;
+        position:fixed;
+        top:-100vh;
+        right:0;
+        left:0;
+        bottom: 0;
+        margin: 0;
+        padding: 0;
+        padding-left:20px;
+        transition: top 0.7s ease-in;
+        
+        
+        & ul {
+            display: block;
+            height:70vh;
+            display: flex;
+            flex-direction: column;
+            align-items:flex-start;
+            justify-content: space-around;
+            margin:85px 0 0 0;
+            padding: 0;  
+        }
+        & li a {
+            text-decoration: none;
+            color: white;
+            transition: transform .3s;
+            &:hover {
+                transform: translate(1.1);
+
+            }
+        }
+    }
+
+}
+
+/* HAMBURGER TOGGLE END */
+
+
 
 
 /* HOVER BUTTON */
