--- a/styles/style.scss
+++ b/styles/style.scss
@@ -198,10 +198,7 @@
     //  linear-gradient(to bottom, blue 50%, transparent 50%) ;
         // &__text {
         
-    &__text {
-
-    }
-        
+   
 
 }
 
@@ -480,6 +477,12 @@ right: -70px;
 } /* END OF MAX-WIDTH 905PX */
 
 @media (max-width: 640px) {
+
+    .sectionFlickity {
+        margin: 0 auto;
+        max-width: 40%;
+        margin-bottom:10px;
+    }
         h2.reviewHeading {
             display:inline-block;
             margin:250px 0; 
@@ -489,14 +492,14 @@ right: -70px;
         .reviewsContent {
         position: relative;
             &__body {
-                margin-top:-80px;
+                margin-top:-30px;
                 width: 300px;
                 font-size: 1.3rem;
                 position: absolute;
             }
             &__author {
                 width:300px;
-                margin-top: 15px;
+                margin-top: 50px;
                 font-size: 1.3rem;
                 margin-bottom: 0px;
             }
@@ -518,9 +521,14 @@ right: -70px;
 
 @media (max-width: 460px) {
 
-    .carousel-cell img  {
-        width: 50px;
+    
+
+    .sectionFlickity {
+        margin: 0 auto;
+        max-width: 40%;
+        margin-bottom:10px;
     }
+
     
     h2.reviewHeading__h2 {
             display:inline-block;
@@ -533,12 +541,12 @@ right: -70px;
             
             &__body {
                 position: absolute;
-                margin-top:-90px;
+                margin-top:-70px;
                 width: 200px;
                 font-size: 1.3rem;
             }
             &__author {
-                margin-top:20px;
+                margin-top:30px;
                 width:220px;
                 font-size: 1.2rem;
                 margin-bottom: 0px;
@@ -554,12 +562,23 @@ right: -70px;
 
 /* EVENTS SECTION STYLES START */
 .eventsContent__cell {
+    overflow: hidden;
     flex: 0 1 calc(100% / 3);
+    &:nth-of-type(1) {
+        position: relative;
+    }
     &:nth-of-type(2) {
+        position: relative;
+    }
+    &:nth-of-type(3) {
         position: relative;
     }
     &__image {
         height: 100%;
+    }
+    &:hover .eventsContent__overlay {
+        top:0px;
+        
     }
 }
 
@@ -568,15 +587,18 @@ right: -70px;
     text-align: center;
     flex-direction: column;
     width: 100%;
-	background-color: rgba(0, 0, 0, 0.8);
+    height:100%;
 	justify-content: center;
 	align-items: center;
     color: #FFFFFF;
     display: flex;
-    top: 0;
+    top: -100%;
 	right: 0;
-	bottom: 0;
-	left: 0;
+	/* bottom: 0; */
+    left: 0;
+    transition:all 0.4s ease-out;
+    background-color: rgba(0, 0, 0, 0.7);
+    
     &__body {
         font-size: 1.6rem;
         width: 80%;
@@ -699,11 +721,17 @@ right: -70px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    
+    transition: transform .3s;
     text-align: center;
+    &:hover{ 
+            transform: scale(1.0);
+        }
     &__icon {
         font-size: 4.0rem;
         margin-bottom: 25px;
+        &:hover{ 
+            transform: scale(1.3);
+        }
     }
 
     &__heading {
@@ -747,6 +775,12 @@ right: -70px;
     width: 30%;
     display: flex;
     flex-direction: column;
+    & img {
+        &:hover {
+        box-shadow:0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+        cursor: pointer;
+    }
+}
     &__heading {
         text-transform: none;
         font-size: 2.0rem;
@@ -856,6 +890,11 @@ right: -70px;
 .instagramGallery__cell {
     width: 22%;
     margin-bottom: 10px;
+    transition: all 0.1s ease-in;
+    &:hover{ 
+            transform: scale(1.2);
+            cursor: pointer;
+        }
 }
 
 .footerNav {
