--- a/styles/partials/_utils.scss
+++ b/styles/partials/_utils.scss
@@ -70,7 +70,7 @@ i.fa-bars {
         display: block;
         cursor: pointer;
         color:white;
-
+       
     }
 
     .navigation--responsive {
@@ -86,7 +86,7 @@ i.fa-bars {
         margin: 0;
         padding: 0;
         padding-left:20px;
-        transition: top 0.7s ease-in;
+        transition: top 0.5s ease-out;
         
         
         & ul {
