--- a/styles/style.css
+++ b/styles/style.css
@@ -200,9 +200,9 @@ i.fa-bars {
     margin: 0;
     padding: 0;
     padding-left: 20px;
-    -webkit-transition: top 0.7s ease-in;
-    -o-transition: top 0.7s ease-in;
-    transition: top 0.7s ease-in; }
+    -webkit-transition: top 0.5s ease-out;
+    -o-transition: top 0.5s ease-out;
+    transition: top 0.5s ease-out; }
     .navigation--responsive ul {
       display: block;
       height: 70vh;
